--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "types": ["node"],
+    "esModuleInterop": true,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
