--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "expo": "^52.0.0",
     "immer": "^10.1.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
