--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "expo": "^52.0.0",
     "immer": "^10.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-encrypted-storage": "^4.0.3",
